# bcx

./: .gitignore  AUTHORS  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
bc/: Makefile.am  Makefile.in  bc.c  bc.h  bc.y  execute.c  main.c  sbc.y  scan.c  scan.l  storage.c  util.c  warranty.c
dc/: Makefile.am  Makefile.in  dc.c  numeric.c
doc/: Makefile.in  bc.info  dc.info
h/: getopt.h  number.h
lib/: Makefile.am  Makefile.in  bi.c  bi.h  getopt.c  number.c
lib/.deps/: testmul.Po
